--- a/scrawly/src/css/style.css
+++ b/scrawly/src/css/style.css
@@ -49,7 +49,7 @@ input[type=submit] {
 }
 
 .homepage {
-    height: 100vh;
+    height: 75vh;
 }
 
 table.poll {
@@ -123,4 +123,9 @@ table.poll tbody tr td button {
     align-items: center;
     justify-content: center;
     margin-top: 1em;
+}
+
+.font404{
+    color: black;
+    font-size: 2em;
 }
