Mise en place de l'envoi des donnes de l'api vers le showScrawl

--- a/scrawly/src/css/style.css
+++ b/scrawly/src/css/style.css
@@ -17,6 +17,11 @@ h1 {
     color: white;
 }
 
+h2{
+    margin: 0.5em 0;
+    color: black;
+}
+
 .btn,
 input[type=submit] {
     color: var(--main-btn-font-color);
